--- a/sample-data-analysis.Rmd
+++ b/sample-data-analysis.Rmd
@@ -1,30 +1,31 @@
 ---
-title: "sample-data-analysis"
+title: "Sample Data Analysis"
 author: "Julian DeGroot-Lutzner"
 date: "1/2/2018"
 output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo= TRUE, message = FALSE, warning = FALSE,
+                      cache= TRUE, fig.width = 7, fig.height = 4,
+                      fig.align = "center")
+options(digits=4)
+require(readr)
+
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r}
+samp_board<- read_csv("sample-board-data.csv")
+samp_board_plus <- read_csv("sample-board-plus-data.csv")
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+head(samp_board)
+head(samp_board_plus)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r}
+
+```
+
+
